--- a/jsfoundationreview/index.html
+++ b/jsfoundationreview/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JavaScript Foundations Practice</title>
 </head>
 <body>
     <script src="variablepractice.js"></script>
     <script src="expressionspractice.js"></script>
     <script src="funtionspractice.js"></script>
+    <script src="loopsPractice.js"></script>
+    <script src="conditionalsPractice.js"></script>
 </body>
 </html>
